--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 * {
   box-sizing: border-box;
   background: #f4f5f9;
+  color: #636363;
+}
+
+body {
+  margin: 30px;
 }
 
 .header {
   display: flex;
-  margin: 30px;
+  /* margin: 30px; */
 }
 
 .filter {
@@ -27,14 +32,71 @@
   display: flex;
   padding: 3px 10px;
   cursor: pointer;
-
 }
 
 .emailtype>.emailtype_option>span:hover {
   background-color: #e1e4ea;
-  border: 1px solid #cfd2dc;
   border-radius: 15px;
+  border: #cfd2dc;
 }
+
+.email_list {
+  width: 100%;
+  border: 1px solid #cfd2dc;
+  display: flex;
+  /* margin: 30px; */
+  margin-top: 20px;
+  padding: 0.5em 1em;
+  overflow: hidden;
+}
+
+.email_display_image {
+  width: 64px;
+}
+
+.email_fields {
+  margin-left: 1em;
+}
+
+.email_fields>p {
+  margin: 0px 0px 3px 0px;
+}
+
+.email_field_from>span{
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.email_field_subject>span{
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.email_description {
+  padding: 6px 0px;
+  font-size: smaller;
+}
+.email_field_date>span{
+  margin-right: 25px;
+}
+
+.email_fields>div>button {
+  font-weight: bold;
+  border: none;
+  /* border: 1px solid ;
+  border-radius: 8px; */
+  margin-top: 5px;
+  padding-left: 0px;
+  
+}
+
+.email_fields>div>button:hover {
+  color: #e54065;
+  cursor: pointer;
+  /* border: 1px solid;
+  background-color: #e1e4ea; */
+}
+
 
 /* #root {
   max-width: 1280px;
