--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@ body {
 .header {
   display: flex;
   margin-bottom: 20px;
-  /* margin: 30px; */
 }
 
 .filter {
@@ -25,14 +24,14 @@ body {
   display: flex;
 }
 
-.emailtype>.emailtype_option {
+.emailtype > .emailtype_option {
   display: flex;
   margin-right: 8px;
   padding: 3px 14px;
   cursor: pointer;
 }
 
-.emailtype>.emailtype_option:hover {
+.emailtype > .emailtype_option:hover {
   background-color: #e1e4ea;
   border-radius: 15px;
   border: #cfd2dc;
@@ -45,7 +44,6 @@ body {
   margin-bottom: 20px;
   border-radius: 8px;
   background-color: white;
-  /* margin: 30px; */
   padding: 0.5em 1em;
   overflow: hidden;
 }
@@ -63,7 +61,7 @@ body {
   margin-left: 15px;
 }
 
-.email_fields>section {
+.email_fields > section {
   margin: 0px 0px 3px 0px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -72,12 +70,12 @@ body {
   -webkit-box-orient: vertical;
 }
 
-.email_field_from>span {
+.email_field_from > span {
   font-weight: bold;
   font-size: 14px;
 }
 
-.email_field_subject>span {
+.email_field_subject > span {
   font-weight: bold;
   font-size: 14px;
 }
@@ -85,32 +83,23 @@ body {
 .email_description {
   padding: 4px 0px 1px;
   font-size: 14px;
-  /* overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical; */
 }
 
 .email_field_date {
   margin-right: 30px;
 }
 
-.email_fields>div>button {
+.email_fields > div > button {
   all: unset;
   font-weight: bold;
   border: none;
-  /* border: 1px solid ;
-  border-radius: 8px; */
   margin-top: 4px;
   padding-left: 0px;
 }
 
-.email_fields>div>button:hover {
+.email_fields > div > button:hover {
   color: #e54065;
   cursor: pointer;
-  /* border: 1px solid;
-  background-color: #e1e4ea; */
 }
 
 .mail {
@@ -142,11 +131,10 @@ body {
 .email_body_main {
   width: 100%;
   margin-left: 20px;
-  /* border: 1px solid #e54065; */
 }
 
 .email_body_header {
-  display:flex;
+  display: flex;
   justify-content: space-between;
 }
 
@@ -154,10 +142,8 @@ body {
   font-size: 30px;
 }
 
-.email_body_header>button {
+.email_body_header > button {
   background-color: white;
-  /* position: absolute;
-  right: 90px; */
   height: min-content;
   width: max-content;
   border: 1px solid #e54065;
@@ -165,13 +151,17 @@ body {
   padding: 5px 12px;
 }
 
-.email_body_header>button:hover {
+.email_body_header > button:hover {
   cursor: pointer;
   color: #f4f5f9;
   background-color: #e54065;
 }
 
-.email_body_date{
+.email_body_header > button.favorite {
+  background-color: #e54065;
+}
+
+.email_body_date {
   margin-top: 20px;
 }
 
@@ -190,46 +180,3 @@ body {
   line-height: 62px;
   font-weight: bold;
 }
-
-
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
